--- a/fxqa-cache.conf
+++ b/fxqa-cache.conf
@@ -1,5 +1,5 @@
 # This is a TOML document. Boom.
-title = "Foxit QA Cache Service Configure File"
+title = "xx QA Cache Service Configure File"
 
 [owner]
 name = "xiaoxia_yu"
